--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -49,7 +49,7 @@ platform_definition:
           - jdk8
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 3.0.7.RELEASE
+      version: 3.0.8.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -62,7 +62,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.5.BUILD-SNAPSHOT
+      version: 1.5.6.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -139,53 +139,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.4.RELEASE
+      version: 1.5.6.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.4.RELEASE
+      version: 1.13.6.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.4.RELEASE
+      version: 2.2.6.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.4.RELEASE
+      version: 2.1.6.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.4.RELEASE
+      version: 1.1.6.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.4.RELEASE
+      version: 1.9.6.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.4.RELEASE
+      version: 1.11.6.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.4.RELEASE
+      version: 1.2.6.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.4.RELEASE
+      version: 1.0.6.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.4.RELEASE
+      version: 1.10.6.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -193,29 +193,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.4.RELEASE
+      version: 4.2.6.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.4.RELEASE
+      version: 1.8.6.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.4.RELEASE
+      version: 2.6.6.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.4.RELEASE
+      version: 2.1.6.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.9.RELEASE
+      version: 4.3.10.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -244,7 +244,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.10.RELEASE
+      version: 4.3.11.RELEASE
       build:
         checkout: 4.3.x
         compileWith: jdk8
@@ -709,11 +709,12 @@ platform_definition:
       - 'org.xerial:sqlite-jdbc'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
-    'com.fasterxml.jackson.core:jackson-annotations': '2.8.8'
+    'com.fasterxml.jackson.core:jackson-annotations': '2.8.9'
     'com.gemstone.gemfire:gemfire': '8.2.5'
+    'com.jayway.jsonpath:json-path': '2.3.0'
     'com.rometools:rome': '1.7.2'
     'com.squareup.okhttp3:okhttp': '3.7.0'
-    'io.netty:netty-all': '4.1.11.Final'
+    'io.netty:netty-all': '4.1.13.Final'
     'javax.jdo:jdo-api': '3.1'
     'net.sourceforge.htmlunit:htmlunit': '2.23'
     'org.aspectj:aspectjrt': '1.8.10'
