--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -62,7 +62,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.6.RELEASE
+      version: 1.5.7.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -215,7 +215,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.10.RELEASE
+      version: 4.3.11.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
