--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-build</artifactId>
-		<version>Brussels-BUILD-SNAPSHOT</version>
+		<version>Brussels-SR5</version>
 	</parent>
 
 	<artifactId>platform</artifactId>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>io.spring.platform</groupId>
 			<artifactId>platform-bom</artifactId>
-			<version>Brussels-BUILD-SNAPSHOT</version>
+			<version>Brussels-SR5</version>
 			<type>properties</type>
 		</dependency>
 	</dependencies>
