--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,12 +9,12 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.0.BUILD-SNAPSHOT
+      version: 3.1.0.RC1
       modules:
         - reactor-core
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 2.0.0.M5
+      version: 2.0.0.RC1
       modules:
         - spring-amqp
         - spring-rabbit
@@ -42,6 +42,7 @@ platform_definition:
       modules:
         - spring-boot
         - spring-boot-actuator
+        - spring-boot-actuator-autoconfigure
         - spring-boot-actuator-docs
         - spring-boot-autoconfigure
         - spring-boot-cli
@@ -120,81 +121,81 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.0.RC2
+      version: 3.0.0.RC3
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.0.RC2
+      version: 3.0.0.RC3
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.0.RC2
+      version: 5.0.0.RC3
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.0.RC2
+      version: 2.0.0.RC3
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.0.RC2
+      version: 3.0.0.RC3
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.0.RC2
+      version: 3.0.0.RC3
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.0.BUILD-SNAPSHOT
+      version: 5.0.0.RC4
       modules:
         - spring-aop
         - spring-aspects
@@ -223,7 +224,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.0.M6
+      version: 5.0.0.M7
       build:
         compileWith: jdk8
         runTestsWith:
@@ -257,6 +258,7 @@ platform_definition:
         - spring-integration-syslog
         - spring-integration-test
         - spring-integration-twitter
+        - spring-integration-webflux
         - spring-integration-websocket
         - spring-integration-ws
         - spring-integration-xml
@@ -285,7 +287,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.0.0.M3
+      version: 2.0.0.RC1
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -336,7 +338,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.0.M3
+      version: 5.0.0.M4
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -371,7 +373,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 2.0.0.M3
+      version: 2.0.0.M4
       modules:
         - spring-session-core
         - spring-session-data-redis
@@ -701,12 +703,14 @@ platform_definition:
       - 'org.jetbrains.kotlin:kotlin-stdlib-jre8'
       - 'org.jooq:jooq-codegen'
       - 'org.jooq:jooq-meta'
+      - 'org.junit.jupiter:junit-jupiter-engine'
       - 'org.mariadb.jdbc:mariadb-java-client'
       - 'org.mongodb:bson'
       - 'org.mongodb:mongodb-driver-core'
       - 'org.neo4j:neo4j-ogm-api'
       - 'org.neo4j:neo4j-ogm-compiler'
       - 'org.neo4j:neo4j-ogm-http-driver'
+      - 'org.apache.openjpa:openjpa-persistence-jdbc'
       - 'org.postgresql:postgresql'
       - 'org.seleniumhq.selenium:selenium-api'
       - 'org.seleniumhq.selenium:selenium-chrome-driver'
@@ -724,19 +728,20 @@ platform_definition:
       - 'org.springframework.restdocs:spring-restdocs-asciidoctor'
       - 'org.springframework:spring-build-src'
       - 'org.xerial:sqlite-jdbc'
+      - 'org.xmlunit:xmlunit-legacy'
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
-    'com.fasterxml.jackson.core:jackson-annotations': '2.9.0.pr4'
-    'com.fasterxml.jackson.core:jackson-core': '2.9.0.pr4'
-    'com.fasterxml.jackson.core:jackson-databind': '2.9.0.pr4'
-    'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor': '2.9.0.pr4'
-    'com.fasterxml.jackson.dataformat:jackson-dataformat-smile': '2.9.0.pr4'
-    'com.fasterxml.jackson.dataformat:jackson-dataformat-xml': '2.9.0.pr4'
-    'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4': '2.9.0.pr4'
-    'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5': '2.9.0.pr4'
-    'com.fasterxml.jackson.datatype:jackson-datatype-jdk8': '2.9.0.pr4'
-    'com.fasterxml.jackson.datatype:jackson-datatype-joda': '2.9.0.pr4'
+    'com.fasterxml.jackson.core:jackson-annotations': '2.9.1'
     'org.aspectj:aspectjweaver': '1.9.0.BETA-6'
+    'org.eclipse.jetty:jetty-client': '9.4.7.RC0'
+    'org.eclipse.jetty:jetty-server': '9.4.7.RC0'
+    'org.eclipse.jetty:jetty-servlet': '9.4.7.RC0'
+    'org.eclipse.jetty:jetty-webapp': '9.4.7.RC0'
+    'org.eclipse.jetty.websocket:websocket-client': '9.4.7.RC0'
+    'org.eclipse.jetty.websocket:websocket-server': '9.4.7.RC0'
+    'org.eclipse.persistence:org.eclipse.persistence.jpa': '2.7.0-RC3'
+    'org.testng:testng': '6.12'
+    'javax.servlet:javax.servlet-api': '4.0.0'
   repositories:
       - id: central
         url: http://repo1.maven.org/maven2
