--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -62,7 +62,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.7.RELEASE
+      version: 1.5.8.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
